# notebooklm-mcp

./: .gitignore  README.md  pyproject.toml  test_auth_parsing.py  test_mcp.py
.github/workflows/: ci.yml  release.yml
notebooklm_mcp/: auth_cli.py  server.py
